fix contrast in footer

--- a/main.scss
+++ b/main.scss
@@ -192,7 +192,7 @@ a.o-buttons--standout{
 	text-align: center;
 	font-style: italic;
 	font-weight: 200;
-	color: #777777;
+	color: #767676;
 
 	svg {
 		fill: #999999;
